0.7.0 (currently working on)
- [#1580] Change: Move the seminarbag::getAdditionalQuery* functions to the seminarbagbuilder
- [#2158] Feature: Allow to add additional tables in the bag builder via a method
- [#1583] Feature: Add a registration bag builder
- [#2165] Feature: Show the accreditation number in the mod2 events list and registrations list
- [#2181] Change: Move the category list to its own class (a view)
- [#2160] Change: Add methods for hiding and un-hiding columns in tx_seminars_pi1
- [#2178] Feature: Add methods hideSubpartsArray and unhideSubpartsArray to tx_seminars_templatehelper
- [#1951] Feature: Allow the CSV export of registration data in the "my VIP events" list
- [#1949] Feature: Allow VIP users to FE-edit their events
- [#2155] Fix: Unit test failure: tx_seminars_eventEditorChild_testcase::testGetEventSuccessfullySavedUrlReturnsUrlStartingWithHttp
- [#1137] Change: Change =& new to = new and remove the & from before function names
- [#2156] Add a Dutch manual, thanks to Nico Deblauwe
- [#2146] Change: Move the setting/hiding of fields from pi1::createSingleView to separate functions
- [#1946] Feature: Allow deleting attached files in the FE event editor
- [#1945] Feature: Add a file upload to the FE event editor
- [#1036] Change: Use terms.htmlid instead of the verbatim HTML ID in the HTML template
- [#2151] Fix: tx_seminars_templatehelper::getSubpartForCallback has to be protected in PHP 5.3
- [#2145] Change: Use an array and a foreach loop in createListHeader()
- [#2020] Fix: The "other dates for this topic" list shows also single events
- [#837] Change: Update the Seminar Manager to FORMidable 1.1.0
- [#2076] Fix: Date not linked in the "other dates for this topic" list
- [#1073] Feature: Add flexforms checkboxes to filter which event types should be displayed in the list view
- [#2113] Change: Move the filter for the event type to the seminar bag builder